<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:id="@+id/parent_layout">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp">

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="8dp">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_alignParentStart="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentTop="true"
                android:layout_marginStart="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:padding="8dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textViewDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_marginTop="8dp"
                android:layout_toRightOf="@id/imageView"
                android:text="@string/dateText"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Small"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="@+id/textViewHR"
                app:layout_constraintTop_toBottomOf="@+id/textViewHR" />

            <TextView
                android:id="@+id/textViewSysPress"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/textViewDate"
                android:layout_marginStart="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginEnd="8dp"
                android:layout_marginRight="8dp"
                android:layout_toRightOf="@id/imageView"
                android:text="@string/sysPresText"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Small"
                app:layout_constraintBottom_toTopOf="@+id/textViewDiaPress"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/imageView"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textViewDiaPress"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/textViewSysPress"
                android:layout_marginTop="8dp"
                android:layout_toRightOf="@id/imageView"
                android:text="@string/diaPresText"
                app:layout_constraintBottom_toTopOf="@+id/textViewHR"
                app:layout_constraintStart_toStartOf="@+id/textViewSysPress"
                app:layout_constraintTop_toBottomOf="@+id/textViewSysPress" />

            <TextView
                android:id="@+id/textViewHR"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/textViewDiaPress"
                android:layout_marginTop="8dp"
                android:layout_toRightOf="@id/imageView"
                android:text="@string/hrText"
                app:layout_constraintBottom_toTopOf="@+id/textViewDate"
                app:layout_constraintStart_toStartOf="@+id/textViewDiaPress"
                app:layout_constraintTop_toBottomOf="@+id/textViewDiaPress" />

            <TextView
                android:id="@+id/textViewSysPressValue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toBottomOf="@+id/textViewSysPress"
                app:layout_constraintStart_toEndOf="@+id/textViewSysPress"
                app:layout_constraintTop_toTopOf="@+id/textViewSysPress"
                app:layout_constraintVertical_bias="0.0" />

            <TextView
                android:id="@+id/textViewDiaPressValue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toBottomOf="@+id/textViewDiaPress"
                app:layout_constraintStart_toEndOf="@+id/textViewDiaPress"
                app:layout_constraintTop_toTopOf="@+id/textViewDiaPress"
                app:layout_constraintVertical_bias="0.0" />

            <TextView
                android:id="@+id/textViewHRValue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toBottomOf="@+id/textViewHR"
                app:layout_constraintStart_toEndOf="@+id/textViewHR"
                app:layout_constraintTop_toTopOf="@+id/textViewHR" />

            <TextView
                android:id="@+id/textViewDateValue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                app:layout_constraintBottom_toBottomOf="@+id/textViewDate"
                app:layout_constraintStart_toEndOf="@+id/textViewDate"
                app:layout_constraintTop_toTopOf="@+id/textViewDate"
                app:layout_constraintVertical_bias="0.0" />

        </android.support.constraint.ConstraintLayout>

    </android.support.v7.widget.CardView>

</android.support.constraint.ConstraintLayout>